consolidate stats endpoint
