# controllers/v1/stats.js
@@ -10,37 +10,53 @@ const router = new Router({ mergeParams: true });
 // HANDLERS
 
 /**
- * Retrieves stats for getting dentist offices
+ * Retrieves dentist offices count
  *
- * @param {Object} req - the express request
- * @param {Object} res - the express response
+ * @returns {Promise<Object>}
  */
-function getDentistOfficeStats(req, res) {
-  db.DentistInfo.count({
-    where: { id: { gt: 0 } }
-  }).then(count => {
-    res.json({ data: { count } });
+function getDentistsCount() {
+  return new Promise((resolve, reject) => {
+    db.DentistInfo.count({
+      where: { id: { gt: 0 } }
+    }).then(count => {
+      resolve({ count });
+    }).catch(err => reject(err));
   });
 }
 
 /**
- * Retrieves stats for getting active users
+ * Retrieves active members count
+ *
+ * @returns {Promise<Object>}
+ */
+function getActiveUserCount() {
+  return new Promise((resolve, reject) => {
+    db.User.count({
+      where: { verified: true }
+    }).then(count => {
+      resolve({ count });
+    }).catch(err => reject(err));
+  });
+}
+
+/**
+ * Retrieves stats
  *
  * @param {Object} req - the express request
  * @param {Object} res - the express response
  */
-function getActiveUserStats(req, res) {
-  db.User.count({
-    where: { verified: true }
-  }).then(count => {
-    res.json({ data: { count } });
+function getStats(req, res) {
+  Promise.all([
+    getDentistsCount(),
+    getActiveUserCount(),
+  ]).then(stats => {
+    res.json({ data: stats });
   });
 }
 
 // ────────────────────────────────────────────────────────────────────────────────
 // ROUTES
 
-router.route('/dentist-offices').get(userRequired, adminRequired, getDentistOfficeStats);
-router.route('/active-users').get(userRequired, adminRequired, getActiveUserStats);
+router.route('/').get(userRequired, adminRequired, getStats);
 
 export default router;
